--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</style>
 </head>
 <body>
-	<embed>https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro
+	<a> href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro"</a>
 
 
 
