Very unsure if stable
Computer bugged out. In the middle of manipulating sheet.png and lines may be tampered with.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 	</style>
 </head>
 <body>
-	<a> href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro"</a>
-
-
+	<h> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#0000ff">YouTube</font></a>!</h>
 
 
 	<script>
@@ -91,6 +89,7 @@
 						this.rotation = Math.min(Math.PI/2, this.rotation + 0.2);
 					} else {
 						this.rotation = -0.2;
+						
 					}
 				}
 
