Updated side text
Added "known issues" and my email for bug reporting.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 	</style>
 </head>
 <body>
+	<h2>Floaty cow BETA</h2>
 	<h> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#0000ff">YouTube</font></a>!</h>
-
-
-	<script>
+	<h2> Known issues: </h2><h> Moblile platforms' "ok" button don't work | Can fly offscreen to win</h>
+	<h4>Notify <a href="19genge@southcentralusd.us" target="_blank"><font color= "#000000">me</font></a> for any other bugs you may find.</h4>
+		<script>
 
 		var
 
