--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<h> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#0000ff">YouTube</font></a>!</h>
 	<h2> Known issues: </h2><h>Mobile button problem</h>
 	<h4>Notify me at 19genge@southcentralusd.us for any other bugs you may find.</h4>
+	<h9>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</h9>
 		<script>
 
 		var
@@ -272,7 +273,12 @@
 			s_bg.draw(ctx, 0, height - s_bg.height);
 			s_bg.draw(ctx, s_bg.width, height - s_bg.height);
 			s_moon.draw(ctx, 10, 10);
-			
+			if(score >= 5) {
+				s_silver.draw(ctx, 25, 28);
+			}
+			if(score >= 10) {
+				s_gold.draw(ctx, 25, 28);
+			}
 			pipes.draw(ctx);
 			bird.draw(ctx);
 			
