--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<h2>Floaty cow BETA</h2>
-	<h> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#0000ff">YouTube</font></a>!</h>
+	<h> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#ff0000">YouTube</font></a>!</h>
 	<h2> Known issues: </h2><h>Mobile button problem</h>
 	<h4>Notify me at 19genge@southcentralusd.us for any other bugs you may find.</h4>
 	<h9>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</h9>
