Mobile's "new" was not relative

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 				s_numberS.draw(ctx, width2-47, height-304, score, null, 10);
 				s_numberS.draw(ctx, width2-47, height-262, best, null, 10);
 				if (score >= best) {
-					s_new.draw(ctx, width2+20, (height/2)-42);
+					s_new.draw(ctx, s_score.width-44, s_score.height+82);
 				}
 			} else {
 				s_numberB.draw(ctx, null, 20, score, width2);
