--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	</style>
 </head>
 <body>
-	<h2>Floaty cow BETA</h2>
-	<h4>Notify me at 19genge@southcentralusd.us for any other bugs you may find.</h4>
-	<h> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#ff0000">YouTube</font></a>!</h>
-	<h10>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</h10>
-	<h2> Known issues: </h2><h>Mobile button problem</h>
+	<h1>Floaty cow BETA</h1>
+	<h5>Notify me at 19genge@southcentralusd.us for any other bugs you may find.</h5>
+	<div> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#ff0000">YouTube</font></a>!</div>
+	<div>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</div>
+	<h2> Known issues: </h2><h>Mobile button and "new" and medals don't work</h>
 		<script>
 
 		var
