--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
 						currentstate = states.Splash;
 						score = 0;
 					}
+					if (score >= 1) {
+						score -= 1;
+					} else {
+						currentstate = states.Splash;
+						pipes.reset();
+						score = 0;
+					}
 					break;
 
 			}
