--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 </head>
 <body>
 	<h1>Floaty cow BETA</h1>
-	<h5>Notify me at 19genge@southcentralusd.us for any other bugs you may find.</h5>
+	<h5>Notify me at 19genge@southcentralusd.us for bugs or suggestions.</h5>
 	<div> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#ff0000">YouTube</font></a>!</div>
 	<div>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</div>
 	<h2> Known issues: </h2>
-	<h>Mobile button doesn't work</h>
+	<h>No known problems at this time</h>
 		<script>
 
 		var
