Finishing touches before mobile release
added icon for mobile app
changed names from floaty cow beta to just floaty cow

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="moblie-web-app-capable" content="yes">
 
-	<title>Floaty cow</title>
+	<title>Floaty Cow</title>
 
 	<script src="sprite.js"></script>
 
@@ -24,7 +24,7 @@
 	</style>
 </head>
 <body>
-	<h1>Floaty cow BETA</h1>
+	<h1>Floaty Cow</h1>
 	<h5>Notify me at 19genge@southcentralusd.us for bugs or suggestions.</h5>
 	<div> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#ff0000">YouTube</font></a>!</div>
 	<div>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</div>
