--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
 	</style>
 </head>
 <body>
-	<h1>Floaty Cow</h1>
-	<h5>Notify me at 19genge@southcentralusd.us for bugs or suggestions.</h5>
-	<div> Check out the mining pro on <a href="https://www.youtube.com/channel/UCQWRi6Qz5Rw1fnIOQg2E2yQ?&ab_channel=theminingpro" target="_blank"><font color = "#ff0000">YouTube</font></a>!</div>
-	<div>Check out <a href="https://ifunny.co/dankcheesecakememes" target="_blank"><font color = "#FC0">DankCheesecakeMemes</font></a> on Ifunny!</div>
-	<h2> Known issues: </h2>
-	<h>No known problems at this time</h>
 		<script>
 
 		var
@@ -196,12 +190,16 @@
 						currentstate = states.Splash;
 						score = 0;
 					}
-					if (score >= 1) {
-						score -= 1;
+					if (score >= 5) {
+						score -= 5;
 					} else {
-						currentstate = states.Splash;
-						pipes.reset();
-						score = 0;
+						if (score >= 1) {
+							score -= 1;
+						} else {
+							currentstate = states.Splash;
+							pipes.reset();
+							score = 0;
+						}
 					}
 					break;
 
@@ -323,6 +321,7 @@
 				
 				if (score >= best) {
 					s_new.draw(ctx, width2+22, height-282);
+					//localStorage.setItem("bestscore", best);
 				}
 			} else {
 				s_numberB.draw(ctx, null, 20, score, width2);
